doc: update doc