@@ -8,3 +8,6 @@
 --module-path \javafx路径\lib --add-modules=javafx.controls,javafx.fxml   
 ```
 
+反射open
+
+set JAVA_OPTS=--add-opens java.base/java.net=ALL-UNNAMED --add-opens java.base/sun.net.www.protocol.https=ALL-UNNAMED
